--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=price-comparator-market
 
 spring.config.import=env.properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/market
+spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
@@ -13,5 +13,5 @@ spring.datasource.password=${DB_PASSWORD}
 # logging.level.root=warn
 
 # Hibernate/JPA logging
-logging.level.org.hibernate.SQL=trace
-logging.level.org.hibernate.orm.jdbc.bind=trace
+# logging.level.org.hibernate.SQL=trace
+# logging.level.org.hibernate.orm.jdbc.bind=trace
